# titanic-survival-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
models/: feature_names.pkl  metrics.pkl
src/: titanic.ipynb
src/kaggle/: submission.csv
